--- a/src/accets/styles/reset.scss
+++ b/src/accets/styles/reset.scss
@@ -38,10 +38,10 @@ body {
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
-ul[class],
-ol[class] {
-  list-style: none;
-}
+//ul[class],
+//ol[class] {
+//  list-style: none;
+//}
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
